# xrdplayground

./: .gitignore  README.md  XRDplayground.py  pyproject.toml
examples/: marimo_example.py
src/xrdplayground/: __init__.py  models.py  plotting.py  simulate.py  structures.py  utils.py
tests/: test_simulate.py  test_utils.py
