[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "xrdplayground"
version = "0.2.0"
description = "Notebook-friendly X-ray powder diffraction utilities (refactor of XRD Playground without Qt)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
  { name = "CNPEM", email = "" }
]
keywords = ["xrd", "powder", "diffraction", "crystallography", "notebook"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=2.0.0",
  "matplotlib>=3.9.0",
  "xrayutilities>=1.7.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/cnpem/XRDplayground"
Issues = "https://github.com/cnpem/XRDplayground/issues"
